styling: fix navbar padding on small devices

--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  padding: 3vh 10vw ;
+  padding: 4vh 10vw ;
   background-color: $se-light-background-grey ;
 
   .logo {
@@ -16,13 +16,12 @@
     width: 200px;
     object-fit: contain;
   }
-
 }
 
 
 @media screen and (max-width: 768px) {
   .navbar {
-    padding: 3vh 4vw ;
+    padding: 4vh 6vw ;
 
     .logo {
       width: 150px;
@@ -32,7 +31,7 @@
 
 @media screen and (max-width: 500px) {
   .navbar {
-    padding: 3vh 2vw ;
+    padding: 3vh 4vw ;
 
     .logo {
       width: 120px;
